[project]
name = "cquant"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ccxt>=4.5.30",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "vectorbt>=0.28.2",
]

[dependency-groups]
dev = [
    "anywidget>=0.9.21",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = [
    "I", # isort
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "F", # Pyflakes
    "B", # flake8-bugbear
]
